deleted app.js and added style.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-
-
-body {
-font-family: Calibri, "Segoe UI", Arial, sans-serif;
-}
-h1 {
-text-align: center;
-}
-.content {
-margin: 0 auto;
-width: 800px;
-text-align: center;
-}
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1 id="title">This is my simple webpage</h1>
+<div class="content">
+</div>
+</body>
+</html>
