minor padding change after the button in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Character Creation at Your Finger Tips
         </blockquote>
 
-        <div>
+        <div class="pb-4">
             <button
               type="button"
               id="start"
