--- a/login.html
+++ b/login.html
@@ -42,18 +42,16 @@
           height="200px"
         />
         <p id="title">Invsona</p>
-        <div class="m-2 pb-5">
-          <p id="slogan">
-              Character Creation at Your Finger Tips
-          </p>
-        </div>
+        <blockquote id="slogan" class="m-2 pb-5">
+            Character Creation at Your Finger Tips
+        </blockquote>
 
         <div class="pb-4">
             <button
               type="button"
               id="start"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href = './login'"
+              onclick="window.location.href = './login.ejs'"
             >
               Start
             </button>
