--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
         <div class="pb-4">
             <button
               type="button"
-              id="start"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href = './login'"
+              onclick="window.location.href = '/login'"
             >
               Start
             </button>
