--- a/index.html
+++ b/index.html
@@ -13,50 +13,47 @@
     />
 
     <!-- google font -->
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./styles/index.css" />
 
     <title>Invsona</title>
-
   </head>
 
   <body id="background">
-    <div class="card 
-    position-absolute 
-    top-50 start-50 
-    translate-middle
-    rounded-5
-    p-1
-    ">
-      <div class="card text-center p-4 rounded-5" id="innerBox">
-        <img
-          id="logo"
-          class="align-self-center"
-          src="./images/invsona.png"
-          alt="invsona logo"
-          width="200px"
-          height="200px"
-        />
-        <p id="title">Invsona</p>
-        <div class="m-2 pb-5">
-          <p id="slogan">
-              Character Creation at Your Finger Tips
-          </p>
-        </div>
+    <div class="container position-absolute top-50 start-50 translate-middle">
+      <div class="card rounded-5 p-1" id="outerBox">
+        <div class="card text-center p-4 rounded-5" id="innerBox">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col">
+              <img
+                id="logo"
+                class="align-self-center"
+                src="./images/invsona.png"
+                alt="invsona logo"
+                width="200px"
+                height="200px"
+              />
 
-        <div class="pb-4">
-            <button
-              type="button"
-              class="btn btn-primary btn-lg"
-              onclick="window.location.href = '/login'"
-            >
-              Start
-            </button>
-        </div>
+              <h1 id="title">Invsona</h1>
+              <div class="container m-2 pb-5">
+                <p class="wrap" id="slogan">
+                  Character Creation at Your Finger Tips
+                </p>
+              </div>
+
+              <div class="pb-4">
+                <button
+                  type="button"
+                  class="btn btn-primary btn-lg"
+                  onclick="window.location.href = '/login'"
+                >
+                  Start
+                </button>
+              </div>
+            </div>
+            <div class="col"></div>
+          </div>
         </div>
       </div>
     </div>
