--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="icon" href="../images/invsona.png" />
+  <link rel="icon" type="icon" href="/images/Invsona.png"/>
 
   <!-- bootstrap morph theme -->
   <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css" />
 
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <title>Invsona</title>
 
@@ -27,7 +27,7 @@
     p-1
     ">
     <div class="card text-center p-4 rounded-5" id="innerBox">
-      <img id="logo" class="align-self-center" src="./images/invsona.png" alt="invsona logo" width="200px"
+      <img id="logo" class="align-self-center" src="./images/Invsona.png" alt="invsona logo" width="200px"
         height="200px" />
       <p id="title">Invsona</p>
       <div class="m-2 pb-5">
@@ -37,7 +37,7 @@
       </div>
 
       <div class="pb-4">
-        <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href = '/login'">
+        <button type="submit" class="btn btn-primary btn-lg" onclick="window.location.href = '/login'">
           Start
         </button>
       </div>
@@ -46,4 +46,7 @@
   </div>
 </body>
 
+
+<!-- //link to index.js -->
+<script src="./index.js"></script>
 </html>
