--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="icon" href="/images/Invsona.png"/>
+  <link rel="icon" type="icon" href="./images/Invsona.png"/>
 
   <!-- bootstrap morph theme -->
   <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css" />
 
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/styles/index.css" />
 
   <title>Invsona</title>
 
