--- a/playground.html
+++ b/playground.html
@@ -26,10 +26,10 @@
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
-    <link rel="stylesheet" href="./styles/profile.css" />
   </head>
 
   <body>
+    <div class="container text-center align-item-center pt-5 px-5 py-3">
     <div class="container text-center align-item-center pt-5 px-5 py-3">
       <div class="p-2">
         <img
@@ -45,10 +45,35 @@
             <span>Edit Profile</span>
           </a>
         </div>
+
+        <div>
+          <a href="">
+            <img src="../images/icons/edit.png" id="editicon" alt="" />
+            <span>Edit Profile</span>
+          </a>
+        </div>
       </div>
       <h1>Name Placeholder</h1>
     </div>
 
+    <!-- Menu -->
+
+    <div class="container px-4 align-item-center">
+      <div class="card p-2">
+        <a href="##">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/Setting.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
+            </div>
+            <div class="col">Account Settings</div>
+          </div>
+        </a>
+      </div>
     <!-- Menu -->
 
     <div class="container px-4 align-item-center">
@@ -80,7 +105,21 @@
               />
             </div>
             <div class="col">Filters</div>
+            <div class="col">Filters</div>
           </div>
+        </a>
+      </div>
+
+      <div class="card p-2">
+        <a href="####">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/Savedpersona.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
         </a>
       </div>
 
@@ -96,7 +135,25 @@
               />
             </div>
             <div class="col">Saved Persona</div>
+            <div class="col">Saved Persona</div>
           </div>
+        </a>
+      </div>
+
+      <div class="card p-2">
+        <a href="#####">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/Saveddialogue.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
+            </div>
+            <div class="col">Saved Dialogue</div>
+          </div>
+        </a>
         </a>
       </div>
 
@@ -126,7 +183,19 @@
                 height="20px"
                 alt=""
               />
+
+      <div class="card p-2">
+        <a href="######">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/AboutUs.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
             </div>
+            <div class="col">About Us</div>
             <div class="col">About Us</div>
           </div>
         </a>
@@ -142,9 +211,34 @@
                 height="20px"
                 alt=""
               />
+        </a>
+      </div>
+
+      <div class="card p-2">
+        <a href="#######">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/FAQ.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
             </div>
             <div class="col">FAQ</div>
+            <div class="col">FAQ</div>
           </div>
+        </a>
+      </div>
+
+      <div class="text-center pt-4">
+        <button
+          type="button"
+          class="btn btn-primary btn"
+          onclick="window.location.href='/logout'"
+        >
+          LOGOUT
+        </button>
         </a>
       </div>
 
