Implement profile settings

--- a/playground.html
+++ b/playground.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./styles/profile.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
+    <link rel="stylesheet" href="./styles/profile.css" />
   </head>
 
   <body>
@@ -48,20 +49,6 @@
             <p class="card-text">This is a wide.</p>
           </div>
         </a>
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
-      <div class="p-2">
-        <img
-          src="../images/cat_placeholder.png"
-          id="userImage"
-          alt="userImage"
-          class="p-2"
-        />
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
-          </a>
         </div>
       </div>
       <h1>Name Placeholder</h1>
@@ -69,15 +56,8 @@
 
     <!-- Menu -->
 
-    <div class="container pt-4 px-5">
-      <div>
-        <form>
-          <!-- Name  -->
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" />
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
+      <!-- Specific -->
+      <div class="row p-4">
         <a href="##">
           <div class="row">
             <div class="col-2">
@@ -89,32 +69,12 @@
               />
             </div>
             <div class="col">Account Settings</div>
-      <!-- Specific -->
+          </div>
+        </a>
+      </div>
+
+      <!-- Creative -->
       <div class="row p-4">
-        <a href="##">
-        <div class="card">
-          <img
-            src="../images/persona/specific.jpg"
-            class="card-img opacity-25"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h1 class="card-title pt-5">Specific</h1>
-            <p class="card-text">This is a wide.</p>
-          </div>
-        </a>
-        </div>
-      </div>
-
-          <!-- Email  -->
-          <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email" />
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
         <a href="###">
           <div class="row">
             <div class="col-2">
@@ -190,61 +150,8 @@
               />
             </div>
             <div class="col">FAQ</div>
-      <!-- Creative -->
-      <div class="row p-4">
-        <a href="###">
-          <div class="card">
-            <img
-              src="../images/persona/creative.jpg"
-              class="card-img opacity-25"
-              alt="..."
-            />
-            <div class="card-img-overlay">
-              <h1 class="card-title pt-5">Creative</h1>
-              <p class="card-text">This is a wide.</p>
-            </div>
           </div>
         </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
       </div>
     </div>
 
