--- a/playground.html
+++ b/playground.html
@@ -26,27 +26,10 @@
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
+    <link rel="stylesheet" href="./styles/profile.css" />
   </head>
 
   <body>
-    <div
-      class="container align-item-center text-center text-black fw-bolder pt-5 mt-4"
-    >
-      <!-- General -->
-      <div class="row p-4">
-      <a href="#">
-        <div class="card">
-          <img
-            src="../images/persona/general.jpg"
-            class="card-img opacity-25"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h1 class="card-title pt-5">General</h1>
-            <p class="card-text">This is a wide.</p>
-          </div>
-        </a>
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
     <div class="container text-center align-item-center pt-5 px-5 py-3">
       <div class="p-2">
         <img
@@ -84,24 +67,6 @@
           </div>
         </a>
       </div>
-    <!-- Menu -->
-
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
-        <a href="##">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Setting.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Account Settings</div>
-          </div>
-        </a>
-      </div>
 
       <!-- Creative -->
       <div class="row p-4">
@@ -116,21 +81,7 @@
               />
             </div>
             <div class="col">Filters</div>
-            <div class="col">Filters</div>
           </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Savedpersona.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
         </a>
       </div>
 
@@ -146,25 +97,7 @@
               />
             </div>
             <div class="col">Saved Persona</div>
-            <div class="col">Saved Persona</div>
           </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Saveddialogue.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Dialogue</div>
-          </div>
-        </a>
         </a>
       </div>
 
@@ -194,38 +127,36 @@
                 height="20px"
                 alt=""
               />
-      <!-- Specific -->
-      <div class="row p-4">
-        <a href="##">
-        <div class="card">
-          <img
-            src="../images/persona/specific.jpg"
-            class="card-img opacity-25"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h1 class="card-title pt-5">Specific</h1>
-            <p class="card-text">This is a wide.</p>
+            </div>
+            <div class="col">About Us</div>
           </div>
         </a>
-        </div>
       </div>
 
-      <!-- Creative -->
-      <div class="row p-4">
-        <a href="###">
-          <div class="card">
-            <img
-              src="../images/persona/creative.jpg"
-              class="card-img opacity-25"
-              alt="..."
-            />
-            <div class="card-img-overlay">
-              <h1 class="card-title pt-5">Creative</h1>
-              <p class="card-text">This is a wide.</p>
+      <div class="card p-2">
+        <a href="#######">
+          <div class="row">
+            <div class="col-2">
+              <img
+                src="../images/icons/FAQ.png"
+                width="20px"
+                height="20px"
+                alt=""
+              />
             </div>
+            <div class="col">FAQ</div>
           </div>
         </a>
+      </div>
+
+      <div class="text-center pt-4">
+        <button
+          type="button"
+          class="btn btn-primary btn"
+          onclick="window.location.href='/logout'"
+        >
+          LOGOUT
+        </button>
       </div>
     </div>
 
