--- a/playground.html
+++ b/playground.html
@@ -29,134 +29,25 @@
   </head>
 
   <body>
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
-      <div class="p-2">
-        <img
-          src="../images/cat_placeholder.png"
-          id="userImage"
-          alt="userImage"
-          class="p-2"
-        />
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
+    <!-- back button  -->
+    <div class="container-fluid">
+      <div class="row text-bg-primary pt-5 pb-4">
+        <div class="col-1">
+          <a href="history.back()">
+            <img
+              src="../images/icons/backarrow.png"
+              alt="back"
+              width="40px"
+              height="40px"
+            />
           </a>
         </div>
-      </div>
-      <h1>Name Placeholder</h1>
-    </div>
-
-    <!-- Menu -->
-
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
-        <a href="##">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Setting.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Account Settings</div>
-          </div>
-        </a>
+        <div class="col text-center">
+          <h1>PLACEHOLDER</h1>
+        </div>
       </div>
 
-      <div class="card p-2">
-        <a href="###">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/filter.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Filters</div>
-          </div>
-        </a>
-      </div>
 
-      <div class="card p-2">
-        <a href="####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Savedpersona.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Persona</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Saveddialogue.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Dialogue</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/AboutUs.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">About Us</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">FAQ</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-      </div>
-    </div>
 
     <!-- bottom nav bar  -->
     <div
