--- a/playground.html
+++ b/playground.html
@@ -31,7 +31,7 @@
   <body>
     <!-- back button  -->
     <div class="container-fluid">
-      <div class="row text-bg-primary pt-5 pb-4">
+      <div class="row text-bg-primary pt-5 pb-4 px-3">
         <div class="col-1">
           <a href="history.back()">
             <img
@@ -43,11 +43,43 @@
           </a>
         </div>
         <div class="col text-center">
-          <h1>PLACEHOLDER</h1>
+          <h1>ACCOUNT SETTINGS</h1>
         </div>
       </div>
+    </div>
 
+    <div class="container pt-4 px-5">
+      <div>
+        <form>
+          <!-- Name  -->
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="name" class="form-control" id="name" />
+          </div>
 
+          <!-- Username  -->
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="username" class="form-control" id="Username" />
+          </div>
+
+          <!-- Email  -->
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" />
+          </div>
+
+          <!-- Password  -->
+          <div class="mb-3 pb-4">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" />
+          </div>
+
+          <!-- Save button -->
+          <button type="submit" class="btn btn-primary">Save</button>
+        </form>
+      </div>
+    </div>
 
     <!-- bottom nav bar  -->
     <div
