--- a/playground.html
+++ b/playground.html
@@ -30,132 +30,57 @@
   </head>
 
   <body>
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
-      <div class="p-2">
-        <img
-          src="../images/cat_placeholder.png"
-          id="userImage"
-          alt="userImage"
-          class="p-2"
-        />
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
-          </a>
+    <div
+      class="container align-item-center text-center text-black fw-bolder pt-5 mt-4"
+    >
+      <!-- General -->
+      <div class="row p-4">
+      <a href="#">
+        <div class="card">
+          <img
+            src="../images/persona/general.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">General</h1>
+            <p class="card-text">This is a wide.</p>
+          </div>
+        </a>
         </div>
       </div>
-      <h1>Name Placeholder</h1>
     </div>
 
-    <!-- Menu -->
-
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
-        <a href="##">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Setting.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Account Settings</div>
+    <div class="container pt-4 px-5">
+      <div>
+        <form>
+          <!-- Name  -->
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="name" class="form-control" id="name" />
           </div>
-        </a>
-      </div>
 
-      <div class="card p-2">
-        <a href="###">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/filter.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Filters</div>
+          <!-- Username  -->
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="username" class="form-control" id="Username" />
           </div>
-        </a>
-      </div>
 
-      <div class="card p-2">
-        <a href="####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Savedpersona.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Persona</div>
+          <!-- Email  -->
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" />
           </div>
-        </a>
-      </div>
 
-      <div class="card p-2">
-        <a href="#####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Saveddialogue.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Dialogue</div>
+          <!-- Password  -->
+          <div class="mb-3 pb-4">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" />
           </div>
-        </a>
-      </div>
 
-      <div class="card p-2">
-        <a href="######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/AboutUs.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">About Us</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">FAQ</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
+          <!-- Save button -->
+          <button type="submit" class="btn btn-primary">Save</button>
+        </form>
       </div>
     </div>
 
